--- a/package.json
+++ b/package.json
@@ -38,14 +38,18 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@happy-dom/global-registrator": "^17.4.4",
-    "@types/bun": "latest"
+    "@release-it/conventional-changelog": "^10.0.1",
+    "@types/bun": "latest",
+    "release-it": "^19.0.2"
   },
   "dependencies": {
     "jsonata": "^2.0.6"
   },
   "scripts": {
     "lint": "bunx biome check --write ./lib",
+    "test": "bun test",
     "build": "bun run ./build.ts",
+    "release": "release-it",
     "dev-server": "bun run examples/default/server.ts",
     "default": "bun examples/default/index.html",
     "gemini": "bun examples/gemini/index.html"
@@ -59,5 +63,8 @@
   "homepage": "https://github.com/Recombo-AI/input-ai",
   "bugs": {
     "url": "https://github.com/Recombo-AI/input-ai/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
